--- a/notebooks/anomaly_detection_solution.ipynb
+++ b/notebooks/anomaly_detection_solution.ipynb
@@ -26,6 +26,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[0:len(test)-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -1408,7 +1437,7 @@
     "auc_loss = auc(fpr_loss, tpr_loss)\n",
     "    \n",
     "plt.plot(fpr_loss, tpr_loss, \"-\", label='BSM (auc = %.1f%%)'%(auc_loss*100.), linewidth=1.5, color = \"orchid\")\n",
-    "    \n",
+    "     \n",
     "plt.semilogx()\n",
     "plt.semilogy()\n",
     "plt.ylabel(\"True Positive Rate\")\n",
@@ -2717,7 +2746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".cmsml",
    "language": "python",
    "name": "python3"
   },
@@ -2731,7 +2760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
